--- a/单调栈和单调队列.md
+++ b/单调栈和单调队列.md
@@ -11,14 +11,14 @@ class Solution {
         List<Integer> stack = new LinkedList<>(); //维护一个单调栈，为了方便存放元素下标
         for(int i = n-1; i >= 0; i--){
             //维护单调栈
-            while(!stack.isEmpty() && temperatures[i] >= temperatures[stack.get(0)]){
+            while(!stack.isEmpty() && temperatures[i] >= temperatures[stack.getFirst()]){
                 stack.removeFirst();
             }
             //如果此时单调栈为空，说明之后没有比他更高的气温
             if(stack.isEmpty())
                 ans[i] = 0;
             else //否则，栈顶元素即为下一个更高温度
-                ans[i] = stack.get(0) - i;
+                ans[i] = stack.getFirst() - i;
             stack.addFirst(i);
         }
         return ans;
