--- a/单调栈和单调队列.md
+++ b/单调栈和单调队列.md
@@ -25,3 +25,37 @@ class Solution {
     }
 }
 ```
+
+# 单调队列
+
+## [1.滑动窗口最大值](https://leetcode.cn/problems/sliding-window-maximum/description/)
+思路：从左到右，维护一个单调队列，队首元素就是当前滑动窗口的最大值，详见代码注释。  
+代码：
+```
+class Solution {
+    public int[] maxSlidingWindow(int[] nums, int k) {
+        int n = nums.length;
+        int[] ans = new int[n-k+1];
+        List<Integer> dequeue = new LinkedList<>();
+        //初始化单调队列
+        for(int i = 0; i < k-1; i++){
+            while(!dequeue.isEmpty() && nums[i] > nums[dequeue.getLast()]) //维护单调队列
+                dequeue.removeLast();
+            dequeue.addLast(i); //入队
+        }
+        //移动滑动窗口得到答案
+        for(int i = k-1; i < n; i++){
+             //维护单调队列
+            while(!dequeue.isEmpty() && nums[i] > nums[dequeue.getLast()])
+                dequeue.removeLast();
+            dequeue.addLast(i); //入队
+            //检查队首元素是否超出滑动窗口
+            if(dequeue.getFirst() <= i - k)
+                dequeue.removeFirst();
+            //此时队首元素就是滑动窗口的最大值
+            ans[i-k+1] = nums[dequeue.getFirst()];
+        }
+        return ans;
+    }
+}
+```
