--- a/相向双指针.md
+++ b/相向双指针.md
@@ -131,17 +131,15 @@ class Solution {
 class Solution {
     public int maxArea(int[] height) {
         int ans = 0;
-        int l = 0;
-        int r = height.length - 1;
-        while(l < r)
-        {
-            int t = Math.min(height[l], height[r]) * (r - l);
-            if(t > ans)
-                ans = t;
-            if(height[l] < height[r])
-                l++;
+        int left = 0;
+        int right = height.length - 1;
+        while(left < right){
+            int s = (right - left) * Math.min(height[left], height[right]);
+            ans = Math.max(ans, s);
+            if(height[left] < height[right])
+                left++;
             else
-                r--;
+                right--;
         }
         return ans;
     }
