--- a/相向双指针.md
+++ b/相向双指针.md
@@ -33,35 +33,31 @@ class Solution {
 ```
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
+        Arrays.sort(nums); //排序
         List<List<Integer>> ans = new ArrayList<>();
-
-        Arrays.sort(nums);
-        for(int i = 0; i < nums.length-2; i++)
-        {
-            if(i > 0 && nums[i] == nums[i-1])    
-            {
-                continue;
-            }
-            int target = 0 - nums[i];
-            int l = i+1;
-            int r = nums.length-1;
-            while(l < r)
-            {
-                if(nums[l] + nums[r] == target)
-                {
-                    ans.add(new ArrayList(Arrays.asList(nums[i], nums[l], nums[r])));
-                    l++;
-                    while(l < r && nums[l-1] == nums[l])
-                        l++;
-                    r--;
-                    while(l < r && nums[r] == nums[r+1])
-                        r--;
+        int n = nums.length;
+        int i = 0;
+        while(i < n - 2){
+            int left = i + 1;
+            int right = n - 1;
+            while(left < right){
+                if(nums[i] + nums[left] + nums[right] == 0){
+                    ans.add(new ArrayList(Arrays.asList(nums[i], nums[left], nums[right])));
+                    left++;
+                    while(left < right && nums[left-1] == nums[left])//指向第一个重复的元素
+                        left++;
+                    right--;
+                    while(left < right && nums[right] == nums[right+1])//指向第一个重复的元素
+                        right--;
                 }
-                else if(nums[l] + nums[r] < target)
-                    l++;
+                else if(nums[i] + nums[left] + nums[right] < 0)
+                    left++;
                 else
-                    r--;
+                    right--;
             }
+            i++;
+            while(i < n - 2 && nums[i-1] == nums[i]) //指向第一个重复的元素,绕过后续重复元素
+                i++;
         }
         return ans;
     }
