--- a/相向双指针.md
+++ b/相向双指针.md
@@ -148,29 +148,24 @@ class Solution {
 ```
 class Solution {
     public int trap(int[] height) {
-        int[] lmax = new int[height.length];
-        int[] rmax = new int[height.length];
-
-        for(int i = 0; i < height.length; i++)
-        {
-            if(i == 0)
-                lmax[i] = height[i];
-            else
-                lmax[i] = Math.max(lmax[i-1], height[i]);
-        }   
-
-        for(int i = height.length-1; i >= 0; i--)
-        {
-            if(i == height.length-1)
-                rmax[i] = height[i];
-            else
-                rmax[i] = Math.max(rmax[i+1], height[i]);
+        int n = height.length;
+        int[] pre = new int[n];
+        int[] post = new int[n];
+        //求前缀数组和后缀数组
+        int max = 0;
+        for(int i = 0; i < n; i++){
+            max = Math.max(max, height[i]);
+            pre[i] = max;
         }
-
+        max = 0;
+        for(int i = n-1; i >= 0; i--){
+            max = Math.max(max, height[i]);
+            post[i] = max;
+        }
+        //根据前缀数组和后缀数组求答案
         int ans = 0;
-        for(int i = 0; i < height.length; i++)
-        {
-            ans += Math.min(lmax[i], rmax[i]) - height[i];
+        for(int i = 0; i < n; i++){
+            ans += Math.min(pre[i], post[i]) - height[i];
         }
         return ans;
     }
