--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -58,23 +58,23 @@ class Solution {
 ```
 class Solution {
     public int lengthOfLongestSubstring(String s) {
-        Set<Character> hash = new HashSet<Character>();
-        int l = 0;
-        int r = 0;
-        int maxl = 0;
-        while(r < s.length())
-        {
-            char c = s.charAt(r);
-            while(l <= r && hash.contains(c))
-            {
-                hash.remove(s.charAt(l));
-                l++;
+        Set<Character> set = new HashSet<>();
+        char[] strArr = s.toCharArray();
+        int n = strArr.length;
+        int left = 0;
+        int right = 0;
+        int maxLength = 0;
+        while(right < n){
+            char c = strArr[right];
+            while(left <= right && set.contains(c)){
+                set.remove(strArr[left]);
+                left++;
             }
-            hash.add(c);
-            maxl = Math.max(maxl, r-l+1);
-            r++;
+            set.add(c);
+            maxLength = Math.max(maxLength, right - left + 1);
+            right++;
         }
-        return maxl;
+        return maxLength;
     }
 }
 ```
