--- a/滑动窗口.md
+++ b/滑动窗口.md
@@ -326,44 +326,42 @@ class Solution {
 ```
 class Solution {
     public String minWindow(String s, String t) {
-        int[] hashS = new int[128];
-        int[] hashT = new int[128];
-        for(int i = 0; i < t.length(); i++)
-            hashT[t.charAt(i)]++;
-        int l = 0;
-        int r = 0;
-        int minl = Integer.MAX_VALUE;
-        String ans = "";
-        while(r < s.length())
-        {
-            hashS[s.charAt(r)]++;
-            while(l <= r && isCover(hashS, hashT))
-            {
-                if(r-l+1 < minl)
-                {
-                    minl = r-l+1;
-                    ans = s.substring(l, r+1);
+        char[] t_mp = new char[128]; //t的哈希表
+        char[] tArr = t.toCharArray();
+        for(char c : tArr){
+            t_mp[c - 'A']++;
+        }
+        char[] s_mp = new char[128]; //s的哈希表
+        char[] sArr = s.toCharArray();
+        int left = 0;
+        int right = 0;
+        int n = sArr.length;
+        int[] ans = new int[]{0, 100001}; //记录最小覆盖子串的起始下标和长度
+        while(right < n){
+            char c = sArr[right]; //考虑当前字符
+            s_mp[c - 'A']++; //加入hash表
+            while(left <= right && isCover(t_mp, s_mp)){
+                if(right - left + 1 < ans[1]){ //更新并记录答案
+                    ans[0] = left;
+                    ans[1] = right - left + 1;
                 }
-                hashS[s.charAt(l)]--;
-                l++;
+                s_mp[sArr[left] - 'A']--;
+                left++;
             }
-            r++;
+            right++;
         }
-        return ans;
-    }   
+        if(ans[1] > 100000) return "";
+        else return s.substring(ans[0], ans[0]+ans[1]);
+    }
 
-    public boolean isCover(int[] hashS, int[] hashT)
-    {
-        for(int i = 'a'; i < 'a' + 26; i++)
-        {
-            if(hashS[i] < hashT[i])
+    //遍历52个字母，检查当前滑动窗口是否覆盖了字符串t
+    boolean isCover(char[] t_mp, char[] s_mp){
+        for(int i = 0; i < 26; i++) //大写字母
+            if(t_mp[i] > s_mp[i])
                 return false;
-        }
-        for(int i = 'A'; i < 'A' + 26; i++)
-        {
-            if(hashS[i] < hashT[i])
+        for(int i = 0; i < 26; i++) //小写字母
+            if(t_mp[i+'a'-'A'] > s_mp[i+'a'-'A'])
                 return false;
-        }
         return true;
     }
 }
