Update 链表 - 删除系列.md

--- a/链表 - 删除系列.md
+++ b/链表 - 删除系列.md
@@ -18,21 +18,17 @@ class Solution {
 ```
 class Solution {
     public ListNode removeNthFromEnd(ListNode head, int n) {
-        ListNode top = new ListNode(0, head);// 由于可能会删除链表头部，用哨兵节点简化代码
-        ListNode left = top, right = top;
-        //right指针先走n步
-        for(int i = 0; i < n; i++)
-            right = right.next;
-        //此时left指针和right指针同时走，距离始终为n
-        //直到right指针指向最后一个节点，则left指针指向倒数第n+1个节点
-        while(right.next != null)
-        {
-            left = left.next;
-            right = right.next;
+        ListNode preHead = new ListNode(0, head); //哨兵节点
+        ListNode slow = preHead;
+        ListNode fast = preHead;
+        for(int i = 0; i < n; i++) //fast指针先走n走
+            fast = fast.next;
+        while(fast.next != null){ //fast和slow指针再同时走
+            fast = fast.next;
+            slow = slow.next;
         }
-        //删除倒数第n个节点
-        left.next = left.next.next;
-        return top.next;
+        slow.next = slow.next.next; //此时slow.next即为待删除节点，删除
+        return preHead.next;
     }
 }
 ```
