--- a/回溯 .md
+++ b/回溯 .md
@@ -308,30 +308,24 @@ public void dfs(List<Integer> path, int i, int sum)
 代码：
 ```
 class Solution {
-    int[] nums;
     List<List<Integer>> ans = new ArrayList<>();
     public List<List<Integer>> permute(int[] nums) {
-        this.nums = nums;
-        dfs(new ArrayList<>(), new boolean[nums.length]);
+        dfs(nums, new boolean[nums.length], new ArrayList<>());
         return ans;
     }
 
-    public void dfs(List<Integer> path, boolean[] onPath)
-    {
-        if(path.size() == nums.length)
-        {
-            ans.add(new ArrayList<>(path));
+    public void dfs(int[] nums, boolean[] isSelect, List<Integer> arr){
+        if(arr.size() == nums.length){
+            ans.add(new ArrayList<>(arr));
             return;
         }
-        for(int i = 0; i < nums.length; i++)
-        {
-            if(!onPath[i])
-            {
-                path.add(nums[i]);
-                onPath[i] = true;
-                dfs(path, onPath);
-                onPath[i] = false; //回溯
-                path.remove(path.size()-1); //回溯
+        for(int i = 0; i < nums.length; i++){
+            if(!isSelect[i]){
+                isSelect[i] = true;
+                arr.add(nums[i]);
+                dfs(nums, isSelect, arr);
+                isSelect[i] = false; //回溯
+                arr.remove(arr.size()-1);//回溯
             }
         }
     }
